levantamiento de observaciones descritas en los casos de prueba de aceptacion

--- a/.gitignore
+++ b/.gitignore
@@ -380,3 +380,4 @@ ModelManifest.xml
 /Capas/CapaLogica/Documento/Log_CAPACITACION.cs.bak
 /Capas/CapaDatos/Documento/Dat_CAPACITACION.cs.bak
 /Capas/CapaEntidad/Documento/Ent_CAPACITACION.cs.bak
+/SIGOFCv3/Archivos/CapConstancias
