--- a/.gitignore
+++ b/.gitignore
@@ -386,3 +386,6 @@ ModelManifest.xml
 /SIGOFCv3/Archivos/Plantilla/20230714163429478.xlsx
 /SIGOFCv3/Archivos/Plantilla/Capacitacion/Temp
 /SIGOFCv3/Archivos/Plantilla/2023718124711405.xlsx
+/SIGOFCv3/Archivos/Plantilla/20230813172321568.xlsx
+/SIGOFCv3/Archivos/Plantilla/20230813170559505.xlsx
+/SIGOFCv3/Archivos/Plantilla/20230813170538531.xlsx
