RSD Digital simplificada Parte 1

--- a/SIGOFCv3/SIGOFCv3.csproj
+++ b/SIGOFCv3/SIGOFCv3.csproj
@@ -428,6 +428,7 @@
     <Content Include="Areas\Capacitacion\Reporte\ReporteCapacitacion.aspx" />
     <Content Include="Areas\Fiscalizacion\css\InformeLegal\IFIDigital.css" />
     <Content Include="Areas\Fiscalizacion\css\ReporteFiscalizacion\Index.css" />
+    <Content Include="Areas\Fiscalizacion\css\ResSubDir\index.css" />
     <Content Include="Areas\Fiscalizacion\js\FiscalizacionNotificacion\AddEdit.js" />
     <Content Include="Areas\Fiscalizacion\js\GestionConstancia\Index.js" />
     <Content Include="Areas\Fiscalizacion\js\InformacionTitular\AddEdit.js" />
@@ -2325,6 +2326,7 @@
     <Content Include="Areas\Supervision\Views\ManInformeExSitu\_shared\_Mandatos.cshtml" />
     <Content Include="Areas\Supervision\Views\ManInforme\Render\_renderObligacionMandatos.cshtml" />
     <Content Include="Areas\General\Views\Controles\_BuscarMandatos.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAU\templates\_tmplFootnotes.cshtml" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <Content Include="Areas\PlanFocalizacion\Views\web.config" />
     <Content Include="Areas\PlanFocalizacion\Views\Shared\_Layout.cshtml" />
