--- a/SIGOFCv3/SIGOFCv3.csproj
+++ b/SIGOFCv3/SIGOFCv3.csproj
@@ -2327,6 +2327,10 @@
     <Content Include="Areas\Supervision\Views\ManInforme\Render\_renderObligacionMandatos.cshtml" />
     <Content Include="Areas\General\Views\Controles\_BuscarMandatos.cshtml" />
     <Content Include="Areas\Fiscalizacion\Views\ManPAU\templates\_tmplFootnotes.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAU\templates\Comunidades nativas\_footnotes.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAU\templates\Concesiones\_footnotes.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAU\templates\Fauna\_footnotes.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAU\templates\Predios privados\_footnotes.cshtml" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <Content Include="Areas\PlanFocalizacion\Views\web.config" />
     <Content Include="Areas\PlanFocalizacion\Views\Shared\_Layout.cshtml" />
