--- a/Capas/CapaDatos/CapaDatos.csproj
+++ b/Capas/CapaDatos/CapaDatos.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Documento\Dat_BITACORA_SUPER.cs" />
     <Compile Include="Documento\Dat_BUSQUEDA.cs" />
     <Compile Include="Documento\Dat_CAPACITACION.cs" />
+    <Compile Include="Documento\Dat_CertificadoPlanta.cs" />
     <Compile Include="Documento\Dat_CNOTIFICACION.cs" />
     <Compile Include="Documento\Dat_Constancia.cs" />
     <Compile Include="Documento\Dat_ControlCalidad.cs" />
