--- a/Capas/CapaEntidad/CapaEntidad.csproj
+++ b/Capas/CapaEntidad/CapaEntidad.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Documento\Ent_BUSQUEDA.cs" />
     <Compile Include="Documento\Ent_CAPACITACION.cs" />
     <Compile Include="Documento\Ent_CAPACITACION_CONSTANCIA.cs" />
+    <Compile Include="Documento\Ent_CertificadoPlanta.cs" />
     <Compile Include="Documento\Ent_CNOTIFICACION.cs" />
     <Compile Include="Documento\Ent_Constancia.cs" />
     <Compile Include="Documento\Ent_ControlCalidad.cs" />
@@ -84,6 +85,7 @@
     <Compile Include="Documento\Ent_DENUNCIA_SITD.cs" />
     <Compile Include="Documento\Ent_Destinatario.cs" />
     <Compile Include="Documento\Ent_DEVOLUCION_MADERA.cs" />
+    <Compile Include="Documento\Ent_DivisionInterna.cs" />
     <Compile Include="Documento\Ent_ERRORMATERIAL.cs" />
     <Compile Include="Documento\Ent_Especie.cs" />
     <Compile Include="Documento\Ent_FControlCalidadSupervision.cs" />
@@ -215,6 +217,7 @@
     <Compile Include="ViewModel\VM_BalanceExtraccion.cs" />
     <Compile Include="ViewModel\VM_CartaNotificacion.cs" />
     <Compile Include="ViewModel\VM_Cbo.cs" />
+    <Compile Include="ViewModel\VM_CertificadoPlanta.cs" />
     <Compile Include="ViewModel\VM_ControlCalidad.cs" />
     <Compile Include="ViewModel\VM_Especies.cs" />
     <Compile Include="ViewModel\VM_FiscalizaNotificacion.cs" />
