--- a/SIGOFCv3/SIGOFCv3.csproj
+++ b/SIGOFCv3/SIGOFCv3.csproj
@@ -327,6 +327,7 @@
     <Compile Include="Areas\Supervision\SupervisionAreaRegistration.cs" />
     <Compile Include="Areas\THabilitante\Controllers\ControlesController.cs" />
     <Compile Include="Areas\THabilitante\Controllers\ManBalanceExtraccionController.cs" />
+    <Compile Include="Areas\THabilitante\Controllers\ManCertificadoPlantaController.cs" />
     <Compile Include="Areas\THabilitante\Controllers\ManDevolucionMaderaController.cs" />
     <Compile Include="Areas\THabilitante\Controllers\ManGuiaTransporteForestalController.cs" />
     <Compile Include="Areas\THabilitante\Controllers\ManInformeAutoridadForestalController.cs" />
@@ -341,6 +342,7 @@
     <Compile Include="Areas\THabilitante\Models\GrillaPOAViewModel.cs" />
     <Compile Include="Areas\THabilitante\Models\ManBalanceExtraccion\ExportarDatos.cs" />
     <Compile Include="Areas\THabilitante\Models\ManBalanceExtraccion\ImportarDatos.cs" />
+    <Compile Include="Areas\THabilitante\Models\ManCertificadoPlanta\ImportarDatos.cs" />
     <Compile Include="Areas\THabilitante\Models\ManGrillaViewModel.cs" />
     <Compile Include="Areas\THabilitante\Models\ManGrillaViewModelMiBosque.cs" />
     <Compile Include="Areas\THabilitante\Models\ManPlanManejoForestal\ImportarDatos.cs" />
@@ -666,6 +668,8 @@
     <Content Include="Areas\THabilitante\js\Controles\Persona.js" />
     <Content Include="Areas\THabilitante\js\Controles\Thabilitante.js" />
     <Content Include="Areas\THabilitante\js\Controles\Ubigeo.js" />
+    <Content Include="Areas\THabilitante\js\ManCertificadoPlanta\AddEdit.js" />
+    <Content Include="Areas\THabilitante\js\ManCertificadoPlanta\_EspeciesEstablecidas.js" />
     <Content Include="Areas\THabilitante\js\ManDevolucionMadera\AddEdit.js" />
     <Content Include="Areas\THabilitante\js\ManDevolucionMadera\Index.js" />
     <Content Include="Areas\THabilitante\js\ManGuiaTransporteForestal\AddEdit.js" />
@@ -2325,6 +2329,12 @@
     <Content Include="Areas\Supervision\Views\ManInformeExSitu\_shared\_Mandatos.cshtml" />
     <Content Include="Areas\Supervision\Views\ManInforme\Render\_renderObligacionMandatos.cshtml" />
     <Content Include="Areas\General\Views\Controles\_BuscarMandatos.cshtml" />
+    <Content Include="Areas\THabilitante\Views\ManCertificadoPlanta\Index.cshtml" />
+    <Content Include="Areas\THabilitante\Views\Controles\_CertifPlanta.cshtml" />
+    <Content Include="Areas\THabilitante\Views\ManCertificadoPlanta\AddEdit.cshtml" />
+    <Content Include="Areas\THabilitante\Views\ManTHabilitante\_shared\_renderEspeciesEstablecidas.cshtml" />
+    <Content Include="Areas\THabilitante\Views\ManCertificadoPlanta\_EspeciesEstablecidas.cshtml" />
+    <Content Include="Archivos\Plantilla\EspeciesEstablecidas\CertPlantaEspeciesEstablecidas.xlsx" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <Content Include="Areas\PlanFocalizacion\Views\web.config" />
     <Content Include="Areas\PlanFocalizacion\Views\Shared\_Layout.cshtml" />
