--- a/Capas/CapaLogica/CapaLogica.csproj
+++ b/Capas/CapaLogica/CapaLogica.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Documento\Log_BITACORA_SUPER.cs" />
     <Compile Include="Documento\Log_BUSQUEDA.cs" />
     <Compile Include="Documento\Log_CAPACITACION.cs" />
+    <Compile Include="Documento\Log_CertificadoPlanta.cs" />
     <Compile Include="Documento\Log_CNOTIFICACION.cs" />
     <Compile Include="Documento\Log_Constancia.cs" />
     <Compile Include="Documento\Log_ControlCalidad.cs" />
