Corrección Observaciones Luis Cruzado/ Richard Aylas y Ruth Orejon

--- a/SIGOFCv3/SIGOFCv3.csproj
+++ b/SIGOFCv3/SIGOFCv3.csproj
@@ -364,9 +364,7 @@
     <Compile Include="frmDownload.aspx.designer.cs">
       <DependentUpon>frmDownload.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Global.asax.cs">
-      <DependentUpon>Global.asax</DependentUpon>
-    </Compile>
+    <Compile Include="Global.asax.cs" />
     <Compile Include="Helper\Auditoria.cs" />
     <Compile Include="Helper\BinaryContentResult.cs" />
     <Compile Include="Helper\ConnectToSharedFolder.cs" />
@@ -821,7 +819,6 @@
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="frmDownload.aspx" />
-    <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Imagenes\BonMan\Aceptar.png" />
     <Content Include="Imagenes\BonMan\Aceptar2.png" />
@@ -2335,6 +2332,7 @@
     <Content Include="Areas\THabilitante\Views\ManTHabilitante\_shared\_renderEspeciesEstablecidas.cshtml" />
     <Content Include="Areas\THabilitante\Views\ManCertificadoPlanta\_EspeciesEstablecidas.cshtml" />
     <Content Include="Archivos\Plantilla\EspeciesEstablecidas\CertPlantaEspeciesEstablecidas.xlsx" />
+    <Content Include="Archivos\Plantilla\Reg_Usu\CERTIFICADO_PLANTA.xlsx" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <Content Include="Areas\PlanFocalizacion\Views\web.config" />
     <Content Include="Areas\PlanFocalizacion\Views\Shared\_Layout.cshtml" />
