Cambios solicitados en las revisión de casos de prueba

--- a/SIGOFCv3/SIGOFCv3.csproj
+++ b/SIGOFCv3/SIGOFCv3.csproj
@@ -759,6 +759,7 @@
     <Content Include="Content\images\logo\escudo-peruano.jpg" />
     <Content Include="Content\images\logo\Icono-Estudio.png" />
     <Content Include="Content\images\logo\Logo-sigo-2.png" />
+    <Content Include="Content\images\logo\mibosque.jpg" />
     <Content Include="Content\images\logo\osinfor-footer-punche.png" />
     <Content Include="Content\images\logo\osinfor-footer.png" />
     <Content Include="Content\images\logo\osinfor-header-1.png" />
@@ -766,6 +767,7 @@
     <Content Include="Content\images\logo\osinfor-header-3.png" />
     <Content Include="Content\images\logo\osinfor-logo.png" />
     <Content Include="Content\images\logo\osinfor.png" />
+    <Content Include="Content\images\logo\siado.jpg" />
     <Content Include="Content\images\logo\sign-check.png" />
     <Content Include="Content\images\ui-bg_diagonals-thick_75_f3d8d8_40x40.png" />
     <Content Include="Content\images\ui-bg_flat_0_aaaaaa_40x100.png" />
