--- a/SIGOFCv3/SIGOFCv3.csproj
+++ b/SIGOFCv3/SIGOFCv3.csproj
@@ -2341,6 +2341,9 @@
     <Content Include="Areas\THabilitante\Views\ManCertificadoPlanta\_EspeciesEstablecidas.cshtml" />
     <Content Include="Archivos\Plantilla\EspeciesEstablecidas\CertPlantaEspeciesEstablecidas.xlsx" />
     <Content Include="Archivos\Plantilla\Reg_Usu\CERTIFICADO_PLANTA.xlsx" />
+    <Content Include="Areas\Supervision\Views\ManInforme\Render\_renderObligacionTitularCusaf.cshtml" />
+    <Content Include="Archivos\Plantilla\Report_SupervisionesDispObligacionesCusaf.xlsx" />
+    <Content Include="Archivos\Plantilla\Report_SupervisionesDispObligacionesCusaf_new.xlsx" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <Content Include="Areas\PlanFocalizacion\Views\web.config" />
     <Content Include="Areas\PlanFocalizacion\Views\Shared\_Layout.cshtml" />
