Agregar ref plantillas

--- a/SIGOFCv3/SIGOFCv3.csproj
+++ b/SIGOFCv3/SIGOFCv3.csproj
@@ -2344,6 +2344,11 @@
     <Content Include="Areas\Supervision\Views\ManInforme\Render\_renderObligacionTitularCusaf.cshtml" />
     <Content Include="Archivos\Plantilla\Report_SupervisionesDispObligacionesCusaf.xlsx" />
     <Content Include="Archivos\Plantilla\Report_SupervisionesDispObligacionesCusaf_new.xlsx" />
+    <Content Include="Archivos\Plantilla\CoberturaBoscosa.xlsx" />
+    <Content Include="Archivos\Plantilla\DatosCampoNoMaderable.xlsx" />
+    <Content Include="Archivos\Plantilla\DatosCampoNoMaderableCarrizo.xlsx" />
+    <Content Include="Archivos\Plantilla\DescUniversoPDC.xlsx" />
+    <Content Include="Archivos\Plantilla\import_paspeq_plantilla.xlsx" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <Content Include="Areas\PlanFocalizacion\Views\web.config" />
     <Content Include="Areas\PlanFocalizacion\Views\Shared\_Layout.cshtml" />
