--- a/Capas/CapaEntidad/CapaEntidad.csproj
+++ b/Capas/CapaEntidad/CapaEntidad.csproj
@@ -235,6 +235,7 @@
     <Compile Include="ViewModel\VM_InformeSuspension.cs" />
     <Compile Include="ViewModel\VM_InformeTecnico.cs" />
     <Compile Include="ViewModel\VM_INFORME_LEGAL_DIGITAL.cs" />
+    <Compile Include="ViewModel\VM_Fiscalizacion_ISupervision.cs" />
     <Compile Include="ViewModel\VM_MiBosqueObligacion.cs" />
     <Compile Include="ViewModel\VM_INFORME_DIGITAL.cs" />
     <Compile Include="ViewModel\VM_Informe_Supervision.cs" />
