--- a/SIGOFCv3/SIGOFCv3.csproj
+++ b/SIGOFCv3/SIGOFCv3.csproj
@@ -2273,9 +2273,6 @@
     <Content Include="Areas\Fiscalizacion\Views\InformeLegal\templates\Fauna\_footnotes.cshtml" />
     <Content Include="Areas\Fiscalizacion\Views\InformeLegal\templates\Predios privados\_footnotes.cshtml" />
     <Content Include="Areas\Fiscalizacion\Views\InformeLegal\templates\Fauna\infracciones\inciso_7.cshtml" />
-    <Content Include="Areas\Fiscalizacion\Views\InformeLegal\templates\Fauna\infracciones\inciso_22.cshtml" />
-    <Content Include="Areas\Fiscalizacion\Views\InformeLegal\templates\Fauna\infracciones\inciso_b.cshtml" />
-    <Content Include="Areas\Fiscalizacion\Views\InformeLegal\templates\Fauna\infracciones\inciso_17.cshtml" />
     <Content Include="Areas\General\Views\Controles\_ActualizaCargoPersona.cshtml" />
     <Content Include="Areas\General\Views\ManPersonas\_AddTipoCargo.cshtml" />
     <Content Include="Areas\General\Views\Controles\_ActualizaCargoPersona.cshtml" />
@@ -2325,6 +2322,14 @@
     <Content Include="Areas\Fiscalizacion\Views\InformeLegal\templates\Predios privados\infracciones\inciso_21.cshtml" />
     <Content Include="Areas\Fiscalizacion\Views\InformeLegal\templates\Predios privados\infracciones\inciso_26.cshtml" />
     <Content Include="Areas\Fiscalizacion\Views\InformeLegal\templates\Predios privados\infracciones\inciso_29.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\InformeLegal\templates\Comunidades nativas\_legal.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\InformeLegal\templates\Concesiones\_legal.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\InformeLegal\templates\Fauna\_legal.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\InformeLegal\templates\Predios privados\_legal.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\InformeLegal\templates\Fauna\infracciones\inciso_2.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\InformeLegal\templates\Fauna\infracciones\inciso_12.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\InformeLegal\templates\Fauna\infracciones\inciso_14.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\InformeLegal\templates\Fauna\infracciones\inciso_24.cshtml" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <Content Include="Areas\PlanFocalizacion\Views\web.config" />
     <Content Include="Areas\PlanFocalizacion\Views\Shared\_Layout.cshtml" />
