--- a/SIGOFCv3/SIGOFCv3.csproj
+++ b/SIGOFCv3/SIGOFCv3.csproj
@@ -243,6 +243,7 @@
     <Compile Include="Areas\Capacitacion\Reporte\ReporteCapacitacion.aspx.designer.cs">
       <DependentUpon>ReporteCapacitacion.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Areas\Fiscalizacion\Controllers\ControlesController.cs" />
     <Compile Include="Areas\Fiscalizacion\Controllers\FiscalizacionNotificacionController.cs" />
     <Compile Include="Areas\Fiscalizacion\Controllers\GestionConstanciaController.cs" />
     <Compile Include="Areas\Fiscalizacion\Controllers\InformacionTitularController.cs" />
@@ -428,6 +429,7 @@
     <Content Include="Areas\Capacitacion\Reporte\ReporteCapacitacion.aspx" />
     <Content Include="Areas\Fiscalizacion\css\InformeLegal\IFIDigital.css" />
     <Content Include="Areas\Fiscalizacion\css\ReporteFiscalizacion\Index.css" />
+    <Content Include="Areas\Fiscalizacion\js\Controles\Ubigeo.js" />
     <Content Include="Areas\Fiscalizacion\js\FiscalizacionNotificacion\AddEdit.js" />
     <Content Include="Areas\Fiscalizacion\js\GestionConstancia\Index.js" />
     <Content Include="Areas\Fiscalizacion\js\InformacionTitular\AddEdit.js" />
@@ -2333,6 +2335,8 @@
     <Content Include="Areas\THabilitante\Views\ManCertificadoPlanta\_EspeciesEstablecidas.cshtml" />
     <Content Include="Archivos\Plantilla\EspeciesEstablecidas\CertPlantaEspeciesEstablecidas.xlsx" />
     <Content Include="Archivos\Plantilla\Reg_Usu\CERTIFICADO_PLANTA.xlsx" />
+    <Content Include="Areas\Fiscalizacion\Views\Controles\_Ubigeo.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\InformeFundamentado\Shared\_renderListInformeSigo.cshtml" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <Content Include="Areas\PlanFocalizacion\Views\web.config" />
     <Content Include="Areas\PlanFocalizacion\Views\Shared\_Layout.cshtml" />
