Primer avance de RD Simplificado

--- a/Capas/CapaDatos/CapaDatos.csproj
+++ b/Capas/CapaDatos/CapaDatos.csproj
@@ -98,12 +98,13 @@
     <Compile Include="Documento\Dat_GuiaTransporte.cs" />
     <Compile Include="Documento\Dat_Informe_Digital.cs" />
     <Compile Include="Documento\Dat_IndicadorFiltro.cs" />
-    <Compile Include="Documento\Dat_Informe_Legal_Digital.cs" />
+    <Compile Include="Documento\Dat_PAU_IFI_Digital.cs" />
     <Compile Include="Documento\Dat_Itenerario.cs" />
     <Compile Include="Documento\Dat_MiBosque_Obligacion.cs" />
     <Compile Include="Documento\Dat_MiBosque_Obligacion_Observacion.cs" />
     <Compile Include="Documento\Dat_Meta.cs" />
-    <Compile Include="Documento\Dat_PAU_Digital.cs" />
+    <Compile Include="Documento\Dat_PAU_RD_Digital.cs" />
+    <Compile Include="Documento\Dat_PAU_RSD_Digital.cs" />
     <Compile Include="Documento\Dat_PlanTrabajo.cs" />
     <Compile Include="Documento\Dat_IMEDIDA.cs" />
     <Compile Include="Documento\Dat_InformeQuinquenal.cs" />
