--- a/Capas/CapaEntidad/CapaEntidad.csproj
+++ b/Capas/CapaEntidad/CapaEntidad.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Documento\Ent_Priorizacion_Detalle.cs" />
     <Compile Include="Documento\Ent_ReportConsolidadoPDC.cs" />
     <Compile Include="Documento\Ent_ReportePDC.cs" />
+    <Compile Include="Documento\Ent_ResDirTabInforme.cs" />
     <Compile Include="Documento\Ent_ResSubDirTabInforme.cs" />
     <Compile Include="Documento\Ent_Ruta.cs" />
     <Compile Include="Documento\Ent_PREVIOS_ALERTA.cs" />
@@ -214,6 +215,7 @@
     <Compile Include="ViewModel\General\VM_ValidacionFormatos.cs" />
     <Compile Include="ViewModel\ListResult.cs" />
     <Compile Include="ViewModel\VM_Alerta.cs" />
+    <Compile Include="ViewModel\VM_PAU_DIGITAL_ALERTA.cs" />
     <Compile Include="ViewModel\VM_BalanceExtraccion.cs" />
     <Compile Include="ViewModel\VM_CartaNotificacion.cs" />
     <Compile Include="ViewModel\VM_Cbo.cs" />
@@ -237,7 +239,7 @@
     <Compile Include="ViewModel\VM_InformeQuinquenal.cs" />
     <Compile Include="ViewModel\VM_InformeSuspension.cs" />
     <Compile Include="ViewModel\VM_InformeTecnico.cs" />
-    <Compile Include="ViewModel\VM_INFORME_LEGAL_DIGITAL.cs" />
+    <Compile Include="ViewModel\VM_PAU_IFI_DIGITAL.cs" />
     <Compile Include="ViewModel\VM_Fiscalizacion_ISupervision.cs" />
     <Compile Include="ViewModel\VM_MiBosqueObligacion.cs" />
     <Compile Include="ViewModel\VM_INFORME_DIGITAL.cs" />
@@ -249,7 +251,8 @@
     <Compile Include="ViewModel\VM_Paspeq.cs" />
     <Compile Include="ViewModel\VM_PaspeqDetalle.cs" />
     <Compile Include="ViewModel\VM_PERSONA_DET_CORREO.cs" />
-    <Compile Include="ViewModel\VM_RSD_DIGITAL.cs" />
+    <Compile Include="ViewModel\VM_PAU_RD_DIGITAL.cs" />
+    <Compile Include="ViewModel\VM_PAU_RSD_DIGITAL.cs" />
     <Compile Include="ViewModel\VM_Proveido.cs" />
     <Compile Include="ViewModel\VM_ProveidoElevacion.cs" />
     <Compile Include="ViewModel\VM_ReporteAntecedentesTitular.cs" />
@@ -258,7 +261,7 @@
     <Compile Include="ViewModel\VM_ReporteSeguimientoRegistro.cs" />
     <Compile Include="ViewModel\VM_Resodirec.cs" />
     <Compile Include="ViewModel\VM_ResolucionTFFS.cs" />
-    <Compile Include="ViewModel\VM_RSD_Resumen.cs" />
+    <Compile Include="ViewModel\VM_PAU_RSD_RESUMEN.cs" />
     <Compile Include="ViewModel\VM_SeguimientoMedida.cs" />
     <Compile Include="ViewModel\VM_Planificacion.cs" />
     <Compile Include="ViewModel\VM_PlanManejoCalificacion.cs" />
