--- a/Capas/CapaLogica/CapaLogica.csproj
+++ b/Capas/CapaLogica/CapaLogica.csproj
@@ -100,14 +100,15 @@
     <Compile Include="Documento\Log_GuiaTransporte.cs" />
     <Compile Include="Documento\Log_IndicadorFiltro.cs" />
     <Compile Include="Documento\Log_Informe_Digital.cs" />
-    <Compile Include="Documento\Log_Informe_Legal_Digital.cs" />
+    <Compile Include="Documento\Log_PAU_IFI_Digital.cs" />
     <Compile Include="Documento\Log_Itenerario.cs" />
     <Compile Include="Documento\Log_MiBosque_Obligacion.cs" />
     <Compile Include="Documento\Log_MiBosque_Obligacion_Observacion.cs" />
     <Compile Include="Documento\Log_Meta.cs" />
     <Compile Include="Documento\Log_NOTIFICACION.cs" />
     <Compile Include="Documento\Log_Paspeq.cs" />
-    <Compile Include="Documento\Log_PAU_Digital.cs" />
+    <Compile Include="Documento\Log_PAU_RD_Digital.cs" />
+    <Compile Include="Documento\Log_PAU_RSD_Digital.cs" />
     <Compile Include="Documento\Log_PLANIFICACION.cs" />
     <Compile Include="Documento\Log_PlanTrabajo.cs" />
     <Compile Include="Documento\Log_PREVIOS_ALERTA.cs" />
