--- a/SIGOFCv3/SIGOFCv3.csproj
+++ b/SIGOFCv3/SIGOFCv3.csproj
@@ -252,6 +252,7 @@
     <Compile Include="Areas\Fiscalizacion\Controllers\ManILegalController.cs" />
     <Compile Include="Areas\Fiscalizacion\Controllers\InformeFundamentadoController.cs" />
     <Compile Include="Areas\Fiscalizacion\Controllers\ManInformeTecnicoController.cs" />
+    <Compile Include="Areas\Fiscalizacion\Controllers\ManPAURDController.cs" />
     <Compile Include="Areas\Fiscalizacion\Controllers\ManPAUController.cs" />
     <Compile Include="Areas\Fiscalizacion\Controllers\ManProveidoController.cs" />
     <Compile Include="Areas\Fiscalizacion\Controllers\ManProveidoElevacionController.cs" />
@@ -428,7 +429,7 @@
     <Content Include="Areas\Capacitacion\Reporte\ReporteCapacitacion.aspx" />
     <Content Include="Areas\Fiscalizacion\css\InformeLegal\IFIDigital.css" />
     <Content Include="Areas\Fiscalizacion\css\ReporteFiscalizacion\Index.css" />
-    <Content Include="Areas\Fiscalizacion\css\ResSubDir\index.css" />
+    <Content Include="Areas\Fiscalizacion\css\ManPAU\index.css" />
     <Content Include="Areas\Fiscalizacion\js\FiscalizacionNotificacion\AddEdit.js" />
     <Content Include="Areas\Fiscalizacion\js\GestionConstancia\Index.js" />
     <Content Include="Areas\Fiscalizacion\js\InformacionTitular\AddEdit.js" />
@@ -440,6 +441,7 @@
     <Content Include="Areas\Fiscalizacion\js\InformeLegal\index.js" />
     <Content Include="Areas\Fiscalizacion\js\ManInformeTecnico\AddEdit.js" />
     <Content Include="Areas\Fiscalizacion\js\ManInformeTecnico\Index.js" />
+    <Content Include="Areas\Fiscalizacion\js\ManPAU\RD.js" />
     <Content Include="Areas\Fiscalizacion\js\ManPAU\RSD.js" />
     <Content Include="Areas\Fiscalizacion\js\ManProveidoElevacion\AddEdit.js" />
     <Content Include="Areas\Fiscalizacion\js\ManProveidoElevacion\Index.js" />
@@ -2346,6 +2348,9 @@
     <Content Include="Archivos\Plantilla\DatosCampoNoMaderableCarrizo.xlsx" />
     <Content Include="Archivos\Plantilla\DescUniversoPDC.xlsx" />
     <Content Include="Archivos\Plantilla\import_paspeq_plantilla.xlsx" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\_InformeResDir.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\_tmplRDInforme.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\_tmplFootnotes.cshtml" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <Content Include="Areas\PlanFocalizacion\Views\web.config" />
     <Content Include="Areas\PlanFocalizacion\Views\Shared\_Layout.cshtml" />
@@ -2617,6 +2622,10 @@
     <Folder Include="Archivos\Temporales\" />
     <Folder Include="Archivos\TransferidosSITD\" />
     <Folder Include="Areas\Fiscalizacion\Views\ManILegal\" />
+    <Folder Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Comunidades nativas\" />
+    <Folder Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Concesiones\" />
+    <Folder Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Fauna\" />
+    <Folder Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Predios privados\" />
     <Folder Include="Areas\Fiscalizacion\Views\ManResolucion\shared\" />
     <Folder Include="Areas\Focalizacion\Models\" />
     <Folder Include="Areas\Focalizacion\Views\Shared\" />
