--- a/SIGOFCv3/packages.config
+++ b/SIGOFCv3/packages.config
@@ -40,6 +40,7 @@
   <package id="Oracle.ManagedDataAccess" version="19.8.0" targetFramework="net46" />
   <package id="Oracle.ManagedDataAccess.EntityFramework" version="19.7.0" targetFramework="net46" />
   <package id="popper.js" version="1.12.9" targetFramework="net452" />
+  <package id="QRCoder" version="1.4.3" targetFramework="net46" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
   <package id="System.Core" version="3.5.21022.801" targetFramework="net46" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net46" />
