--- a/SIGOFCv3/SIGOFCv3.csproj
+++ b/SIGOFCv3/SIGOFCv3.csproj
@@ -2351,6 +2351,7 @@
     <Content Include="Areas\Fiscalizacion\Views\ManPAURD\_InformeResDir.cshtml" />
     <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\_tmplRDInforme.cshtml" />
     <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\_tmplFootnotes.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Concesiones\infracciones\inciso_1.cshtml" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <Content Include="Areas\PlanFocalizacion\Views\web.config" />
     <Content Include="Areas\PlanFocalizacion\Views\Shared\_Layout.cshtml" />
@@ -2623,7 +2624,6 @@
     <Folder Include="Archivos\TransferidosSITD\" />
     <Folder Include="Areas\Fiscalizacion\Views\ManILegal\" />
     <Folder Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Comunidades nativas\" />
-    <Folder Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Concesiones\" />
     <Folder Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Fauna\" />
     <Folder Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Predios privados\" />
     <Folder Include="Areas\Fiscalizacion\Views\ManResolucion\shared\" />
