--- a/SIGOFCv3/SIGOFCv3.csproj
+++ b/SIGOFCv3/SIGOFCv3.csproj
@@ -2352,6 +2352,17 @@
     <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\_tmplRDInforme.cshtml" />
     <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\_tmplFootnotes.cshtml" />
     <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Concesiones\infracciones\inciso_1.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Concesiones\infracciones\inciso_2.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Concesiones\infracciones\inciso_3.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Concesiones\infracciones\inciso_11.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Concesiones\infracciones\inciso_11_1.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Concesiones\infracciones\inciso_16.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Concesiones\infracciones\inciso_21.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Concesiones\infracciones\inciso_26.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Concesiones\infracciones\inciso_29.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Concesiones\infracciones\inciso_32.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Concesiones\infracciones\inciso_b.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Concesiones\infracciones\inciso_e.cshtml" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <Content Include="Areas\PlanFocalizacion\Views\web.config" />
     <Content Include="Areas\PlanFocalizacion\Views\Shared\_Layout.cshtml" />
