--- a/SIGOFCv3/SIGOFCv3.csproj
+++ b/SIGOFCv3/SIGOFCv3.csproj
@@ -2363,6 +2363,17 @@
     <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Concesiones\infracciones\inciso_b.cshtml" />
     <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Concesiones\infracciones\inciso_e.cshtml" />
     <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Concesiones\infracciones\inciso_10.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Predios privados\infracciones\inciso_1.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Predios privados\infracciones\inciso_2.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Predios privados\infracciones\inciso_10.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Predios privados\infracciones\inciso_11.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Predios privados\infracciones\inciso_11_1.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Predios privados\infracciones\inciso_16.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Predios privados\infracciones\inciso_21.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Predios privados\infracciones\inciso_26.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Predios privados\infracciones\inciso_29.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Predios privados\infracciones\inciso_32.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Predios privados\infracciones\inciso_b.cshtml" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <Content Include="Areas\PlanFocalizacion\Views\web.config" />
     <Content Include="Areas\PlanFocalizacion\Views\Shared\_Layout.cshtml" />
@@ -2636,7 +2647,6 @@
     <Folder Include="Areas\Fiscalizacion\Views\ManILegal\" />
     <Folder Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Comunidades nativas\" />
     <Folder Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Fauna\" />
-    <Folder Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Predios privados\" />
     <Folder Include="Areas\Fiscalizacion\Views\ManResolucion\shared\" />
     <Folder Include="Areas\Focalizacion\Models\" />
     <Folder Include="Areas\Focalizacion\Views\Shared\" />
