RD Comunidades nativas

--- a/SIGOFCv3/SIGOFCv3.csproj
+++ b/SIGOFCv3/SIGOFCv3.csproj
@@ -2374,6 +2374,18 @@
     <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Predios privados\infracciones\inciso_29.cshtml" />
     <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Predios privados\infracciones\inciso_32.cshtml" />
     <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Predios privados\infracciones\inciso_b.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Comunidades nativas\infracciones\inciso_1.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Comunidades nativas\infracciones\inciso_2.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Comunidades nativas\infracciones\inciso_10.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Comunidades nativas\infracciones\inciso_11.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Comunidades nativas\infracciones\inciso_11_1.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Comunidades nativas\infracciones\inciso_16.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Comunidades nativas\infracciones\inciso_21.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Comunidades nativas\infracciones\inciso_26.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Comunidades nativas\infracciones\inciso_29.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Comunidades nativas\infracciones\inciso_32.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Comunidades nativas\infracciones\inciso_b.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Comunidades nativas\infracciones\inciso_e.cshtml" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <Content Include="Areas\PlanFocalizacion\Views\web.config" />
     <Content Include="Areas\PlanFocalizacion\Views\Shared\_Layout.cshtml" />
@@ -2645,7 +2657,6 @@
     <Folder Include="Archivos\Temporales\" />
     <Folder Include="Archivos\TransferidosSITD\" />
     <Folder Include="Areas\Fiscalizacion\Views\ManILegal\" />
-    <Folder Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Comunidades nativas\" />
     <Folder Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Fauna\" />
     <Folder Include="Areas\Fiscalizacion\Views\ManResolucion\shared\" />
     <Folder Include="Areas\Focalizacion\Models\" />
