--- a/SIGOFCv3/SIGOFCv3.csproj
+++ b/SIGOFCv3/SIGOFCv3.csproj
@@ -2386,6 +2386,12 @@
     <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Comunidades nativas\infracciones\inciso_32.cshtml" />
     <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Comunidades nativas\infracciones\inciso_b.cshtml" />
     <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Comunidades nativas\infracciones\inciso_e.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Fauna\infracciones\inciso_1.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Fauna\infracciones\inciso_2.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Fauna\infracciones\inciso_7.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Fauna\infracciones\inciso_22.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Fauna\infracciones\inciso_34.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Fauna\infracciones\inciso_e.cshtml" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <Content Include="Areas\PlanFocalizacion\Views\web.config" />
     <Content Include="Areas\PlanFocalizacion\Views\Shared\_Layout.cshtml" />
@@ -2657,7 +2663,6 @@
     <Folder Include="Archivos\Temporales\" />
     <Folder Include="Archivos\TransferidosSITD\" />
     <Folder Include="Areas\Fiscalizacion\Views\ManILegal\" />
-    <Folder Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Fauna\" />
     <Folder Include="Areas\Fiscalizacion\Views\ManResolucion\shared\" />
     <Folder Include="Areas\Focalizacion\Models\" />
     <Folder Include="Areas\Focalizacion\Views\Shared\" />
