--- a/SIGOFCv3/SIGOFCv3.csproj
+++ b/SIGOFCv3/SIGOFCv3.csproj
@@ -611,6 +611,10 @@
     <Content Include="Areas\Supervision\js\ManInforme\Index_suspension.js" />
     <Content Include="Areas\Supervision\js\ManInforme\_ArbolesSinPoa.js" />
     <Content Include="Areas\Supervision\js\ManInforme\_AproSostenible.js" />
+    <Content Include="Areas\Supervision\js\ManInforme\_ActividadProd.js" />
+    <Content Include="Areas\Supervision\js\ManInforme\_DivisionPredio.js" />
+    <Content Include="Areas\Supervision\js\ManInforme\_CoberturaBosNat.js" />
+    <Content Include="Areas\Supervision\js\ManInforme\_EspecieForEst.js" />
     <Content Include="Areas\Supervision\js\ManInforme\_renderEnfermedades.js" />
     <Content Include="Areas\Supervision\js\ManInforme\_ZonifDistribEspecie.js" />
     <Content Include="Areas\Supervision\js\ManInforme\_Infraestructura.js" />
@@ -2346,6 +2350,17 @@
     <Content Include="Archivos\Plantilla\DatosCampoNoMaderableCarrizo.xlsx" />
     <Content Include="Archivos\Plantilla\DescUniversoPDC.xlsx" />
     <Content Include="Archivos\Plantilla\import_paspeq_plantilla.xlsx" />
+    <Content Include="Areas\Supervision\Views\ManInforme\Render\_renderEspecieForEst.cshtml" />
+    <Content Include="Areas\Supervision\Views\ManInforme\_EspecieForEst.cshtml" />
+    <Content Include="Areas\General\Views\Controles\_renderComboEspecie2.cshtml" />
+    <Content Include="Archivos\Plantilla\EspeciesForestalesEstablecidas.xlsx" />
+    <Content Include="Areas\Supervision\Views\ManInforme\Render\_renderActividadProd.cshtml" />
+    <Content Include="Areas\Supervision\Views\ManInforme\_ActividadProd.cshtml" />
+    <Content Include="Areas\Supervision\Views\ManInforme\Render\_renderCoberturaBosNat.cshtml" />
+    <Content Include="Areas\Supervision\Views\ManInforme\_DivisionPredio.cshtml" />
+    <Content Include="Archivos\Plantilla\CoberturaBosquesNaturales.xlsx" />
+    <Content Include="Areas\Supervision\Views\ManInforme\Render\_renderDivisionPredio.cshtml" />
+    <Content Include="Areas\Supervision\Views\ManInforme\_CoberturaBosNat.cshtml" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <Content Include="Areas\PlanFocalizacion\Views\web.config" />
     <Content Include="Areas\PlanFocalizacion\Views\Shared\_Layout.cshtml" />
