Corrección observaciones Calidad

--- a/SIGOFCv3/SIGOFCv3.csproj
+++ b/SIGOFCv3/SIGOFCv3.csproj
@@ -2361,6 +2361,7 @@
     <Content Include="Archivos\Plantilla\CoberturaBosquesNaturales.xlsx" />
     <Content Include="Areas\Supervision\Views\ManInforme\Render\_renderDivisionPredio.cshtml" />
     <Content Include="Areas\Supervision\Views\ManInforme\_CoberturaBosNat.cshtml" />
+    <Content Include="Archivos\Plantilla\DivisionPredio.xlsx" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <Content Include="Areas\PlanFocalizacion\Views\web.config" />
     <Content Include="Areas\PlanFocalizacion\Views\Shared\_Layout.cshtml" />
