--- a/SIGOFCv3/SIGOFCv3.csproj
+++ b/SIGOFCv3/SIGOFCv3.csproj
@@ -2350,6 +2350,7 @@
     <Content Include="Archivos\Plantilla\DatosCampoNoMaderableCarrizo.xlsx" />
     <Content Include="Archivos\Plantilla\DescUniversoPDC.xlsx" />
     <Content Include="Archivos\Plantilla\import_paspeq_plantilla.xlsx" />
+    <Content Include="Areas\Fiscalizacion\Views\ManProveido\_Shared\_renderFallTitular106.cshtml" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <Content Include="Areas\PlanFocalizacion\Views\web.config" />
     <Content Include="Areas\PlanFocalizacion\Views\Shared\_Layout.cshtml" />
