Notas al pie para concesiones

--- a/SIGOFCv3/SIGOFCv3.csproj
+++ b/SIGOFCv3/SIGOFCv3.csproj
@@ -2392,6 +2392,10 @@
     <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Fauna\infracciones\inciso_22.cshtml" />
     <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Fauna\infracciones\inciso_34.cshtml" />
     <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Fauna\infracciones\inciso_e.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Concesiones\_footnotes.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Comunidades nativas\_footnotes.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Fauna\_footnotes.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPAURD\templates\Predios privados\_footnotes.cshtml" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <Content Include="Areas\PlanFocalizacion\Views\web.config" />
     <Content Include="Areas\PlanFocalizacion\Views\Shared\_Layout.cshtml" />
