Actualiza requrmientos de busqueda e integracion con el SITD

--- a/Capas/CapaDatos/CapaDatos.csproj
+++ b/Capas/CapaDatos/CapaDatos.csproj
@@ -104,6 +104,7 @@
     <Compile Include="Documento\Dat_MiBosque_Obligacion_Observacion.cs" />
     <Compile Include="Documento\Dat_Meta.cs" />
     <Compile Include="Documento\Dat_PAU_Digital.cs" />
+    <Compile Include="Documento\Dat_Periodo.cs" />
     <Compile Include="Documento\Dat_PlanTrabajo.cs" />
     <Compile Include="Documento\Dat_IMEDIDA.cs" />
     <Compile Include="Documento\Dat_InformeQuinquenal.cs" />
