--- a/Capas/CapaEntidad/CapaEntidad.csproj
+++ b/Capas/CapaEntidad/CapaEntidad.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Documento\Ent_Destinatario.cs" />
     <Compile Include="Documento\Ent_DEVOLUCION_MADERA.cs" />
     <Compile Include="Documento\Ent_DivisionInterna.cs" />
+    <Compile Include="Documento\Ent_DocumentoEntradaSITD.cs" />
     <Compile Include="Documento\Ent_ERRORMATERIAL.cs" />
     <Compile Include="Documento\Ent_Especie.cs" />
     <Compile Include="Documento\Ent_FControlCalidadSupervision.cs" />
@@ -100,6 +101,7 @@
     <Compile Include="Documento\Ent_LIBRO_OPERACIONES_ARCHIVO.cs" />
     <Compile Include="Documento\Ent_Libro_Operaciones_Movimientos.cs" />
     <Compile Include="Documento\Ent_Libro_Operaciones_THabilitante.cs" />
+    <Compile Include="Documento\Ent_MemoFirmeza.cs" />
     <Compile Include="Documento\Ent_MiBosque_Obligacion.cs" />
     <Compile Include="Documento\Ent_MiBosque_Obligacion_Observacion.cs" />
     <Compile Include="Documento\Ent_Meta.cs" />
@@ -109,6 +111,7 @@
     <Compile Include="Documento\Ent_Paspeq_Detalle.cs" />
     <Compile Include="Documento\Ent_Paspeq_Detalle_V3.cs" />
     <Compile Include="Documento\Ent_PDCImportPASPEQ.cs" />
+    <Compile Include="Documento\Ent_Periodo.cs" />
     <Compile Include="Documento\Ent_PLANIFICACION.cs" />
     <Compile Include="Documento\Ent_PlanManejo_Especies.cs" />
     <Compile Include="Documento\Ent_Plan_Manejo_Supervisado.cs" />
@@ -247,6 +250,7 @@
     <Compile Include="ViewModel\VM_Obligacion.cs" />
     <Compile Include="ViewModel\VM_Paspeq.cs" />
     <Compile Include="ViewModel\VM_PaspeqDetalle.cs" />
+    <Compile Include="ViewModel\VM_Periodo.cs" />
     <Compile Include="ViewModel\VM_PERSONA_DET_CORREO.cs" />
     <Compile Include="ViewModel\VM_RSD_DIGITAL.cs" />
     <Compile Include="ViewModel\VM_Proveido.cs" />
