--- a/SIGOFCv3/SIGOFCv3.csproj
+++ b/SIGOFCv3/SIGOFCv3.csproj
@@ -254,6 +254,7 @@
     <Compile Include="Areas\Fiscalizacion\Controllers\InformeFundamentadoController.cs" />
     <Compile Include="Areas\Fiscalizacion\Controllers\ManInformeTecnicoController.cs" />
     <Compile Include="Areas\Fiscalizacion\Controllers\ManPAUController.cs" />
+    <Compile Include="Areas\Fiscalizacion\Controllers\ManPeriodoController.cs" />
     <Compile Include="Areas\Fiscalizacion\Controllers\ManProveidoController.cs" />
     <Compile Include="Areas\Fiscalizacion\Controllers\ManProveidoElevacionController.cs" />
     <Compile Include="Areas\Fiscalizacion\Controllers\ManResolucionController.cs" />
@@ -442,6 +443,8 @@
     <Content Include="Areas\Fiscalizacion\js\ManInformeTecnico\AddEdit.js" />
     <Content Include="Areas\Fiscalizacion\js\ManInformeTecnico\Index.js" />
     <Content Include="Areas\Fiscalizacion\js\ManPAU\RSD.js" />
+    <Content Include="Areas\Fiscalizacion\js\ManPeriodo\AddEdit.js" />
+    <Content Include="Areas\Fiscalizacion\js\ManPeriodo\index.js" />
     <Content Include="Areas\Fiscalizacion\js\ManProveidoElevacion\AddEdit.js" />
     <Content Include="Areas\Fiscalizacion\js\ManProveidoElevacion\Index.js" />
     <Content Include="Areas\Fiscalizacion\js\ManProveido\AddEdit.js" />
@@ -2337,6 +2340,8 @@
     <Content Include="Archivos\Plantilla\Reg_Usu\CERTIFICADO_PLANTA.xlsx" />
     <Content Include="Areas\Fiscalizacion\Views\Controles\_Ubigeo.cshtml" />
     <Content Include="Areas\Fiscalizacion\Views\InformeFundamentado\Shared\_renderListInformeSigo.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPeriodo\Index.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\ManPeriodo\_AddEdit.cshtml" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <Content Include="Areas\PlanFocalizacion\Views\web.config" />
     <Content Include="Areas\PlanFocalizacion\Views\Shared\_Layout.cshtml" />
