--- a/Capas/CapaLogica/CapaLogica.csproj
+++ b/Capas/CapaLogica/CapaLogica.csproj
@@ -108,6 +108,7 @@
     <Compile Include="Documento\Log_NOTIFICACION.cs" />
     <Compile Include="Documento\Log_Paspeq.cs" />
     <Compile Include="Documento\Log_PAU_Digital.cs" />
+    <Compile Include="Documento\Log_Periodo.cs" />
     <Compile Include="Documento\Log_PLANIFICACION.cs" />
     <Compile Include="Documento\Log_PlanTrabajo.cs" />
     <Compile Include="Documento\Log_PREVIOS_ALERTA.cs" />
