--- a/SIGOFCv3/Web.config
+++ b/SIGOFCv3/Web.config
@@ -72,8 +72,8 @@
   </system.web.extensions>
   <connectionStrings>
     <add name="OracleDbContext" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=oracle_user;Password=oracle_user_password;Data Source=oracle" />
-    <add name="ConexionSITDSql" connectionString="server=10.10.11.20;database=std_osinfor_TEST;uid=consultorusfs14;password=Niarfe22971278/;Connection Timeout=0;Application Name=ServPlataformaInterna" providerName="System.Data.SqlClient" />
-    <add name="ConOracle" connectionString="DATA SOURCE=10.10.11.43:1521/sigod.osinfor.gob.pe;PERSIST SECURITY INFO=True;USER ID=consultoracca001;PASSWORD=Eber$20230929$Argentina" providerName="Oracle.DataAccess.Client" />
+    <add name="ConexionSITDSql" connectionString="server=10.10.11.23;database=std_osinfor_DEV;uid=consultoracca001;password=Eber$20231204$Uruguay;Connection Timeout=0;Application Name=ServPlataformaInterna" providerName="System.Data.SqlClient" />
+    <add name="ConOracle" connectionString="DATA SOURCE=10.10.11.43:1521/sigod.osinfor.gob.pe;PERSIST SECURITY INFO=True;USER ID=consultoracca001;PASSWORD=Eber$20231204$Uruguay" providerName="Oracle.DataAccess.Client" />
     <add name="ConexionSITDSqlALegal" connectionString="server=10.10.11.23;database=BD_AsesoriaLegal_DEV;uid=consultorusfs24;password=*2021*jflp;Connection Timeout=0;Application Name=ServPlataformaInterna" providerName="System.Data.SqlClient" />
     <add name="ConexionSITDSqlTesoreria" connectionString="server=10.10.11.23;database=BD_TESORERIA_DEV;uid=consultorusfs24;password=*2021*jflp;Connection Timeout=0;Application Name=ServPlataformaInterna" providerName="System.Data.SqlClient" />
     <add name="ConexionObservatorio" connectionString="Data Source=10.10.11.43:1521/obsd.osinfor.gob.pe;User Id=consultorusfs10;Password=Osinfor$20210811;" providerName="Oracle.DataAccess.Client" />
