se hacen cambios en la plantilla

--- a/.gitignore
+++ b/.gitignore
@@ -391,3 +391,4 @@ ModelManifest.xml
 /SIGOFCv3/Archivos/Plantilla/20230813170538531.xlsx
 /SIGOFCv3/Controllers/LoginController.cs
 /SIGOFCv3/Web.config
+/SIGOFCv3/Archivos/Constancias/QR
