Actualizar formulario FEMAs

--- a/SIGOFCv3/SIGOFCv3.csproj
+++ b/SIGOFCv3/SIGOFCv3.csproj
@@ -2342,6 +2342,7 @@
     <Content Include="Areas\Fiscalizacion\Views\InformeFundamentado\Shared\_renderListInformeSigo.cshtml" />
     <Content Include="Areas\Fiscalizacion\Views\ManPeriodo\Index.cshtml" />
     <Content Include="Areas\Fiscalizacion\Views\ManPeriodo\_AddEdit.cshtml" />
+    <Content Include="Areas\General\Views\Reportes\IndicadoresOSINFOR_4.cshtml" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <Content Include="Areas\PlanFocalizacion\Views\web.config" />
     <Content Include="Areas\PlanFocalizacion\Views\Shared\_Layout.cshtml" />
